# memtier_benchmark

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile.am  README.md  client.cpp  client.h  cluster_client.cpp  cluster_client.h  command_meta.cpp  command_meta.h  command_meta_data.h  config_types.cpp  config_types.h  configure.ac  connections_manager.h  memtier_benchmark.1  memtier_benchmark.cpp  memtier_benchmark.h  obj_gen.cpp  obj_gen.h  protocol.cpp  protocol.h  retry_policy.cpp  retry_policy.h  run_stats.cpp  run_stats.h  run_stats_types.cpp  run_stats_types.h  shard_connection.cpp  shard_connection.h
.githooks/: pre-commit
.github/workflows/: asan.yml  ci.yml  cli-fuzz-nightly.yml  code-style.yml  differential.yml  dockers.yml  fuzz-smoke.yml  monitor-fuzz.yml  release-rpm.yml  release.yml  soak-nightly.yml  tsan.yml  ubsan.yml
bash-completion/: memtier_benchmark
scripts/: fetch_commands_meta.sh  gen_command_meta.py
tests/: cli_fuzz.py  differential_redis_benchmark.py  include.py  mb.py  redis_tap.py  run_tests.sh  test_arbitrary_command_misses.py  test_cli_fuzz_phase1.py  test_cli_validation_command.py  test_cli_validation_count_flags.py  test_cli_validation_read_preference.py  test_cli_validation_run_count.py  test_cli_validation_sampler.py  test_cli_validation_size.py  test_cluster_transaction.py  test_differential_redis_benchmark.py  test_json_output_integrity.py  test_large_key_prefix.py  test_mget_cluster.py  test_mget_protocol.py  test_mget_standalone.py  test_mget_validation.py  test_miss_rate_tracking.py  test_monitor_cluster.py  test_monitor_cluster_backpressure.py  test_monitor_input.py  test_read_preference_failover.py  test_read_preference_mget.py  test_read_preference_modes.py  test_read_preference_resp3.py  test_read_preference_transaction.py  test_realtime_latencies.py  test_reconnections.py  test_requirements.txt  test_resp_response_fuzzer.py  test_retry_on_error.py  test_sanitizer_stress.py  test_sigpipe_immunity.py  test_sigpipe_tls_rst.py  test_tls_logging.py  (+1 more)
tests/fixtures/: mock_redis_resp_fuzzer.py
tests/fixtures/resp_payloads/: README.md
tests/fuzz/: fuzz_monitor_input.py  fuzz_stubs.cpp  monitor_input_fuzz.cpp  redis_protocol_fuzz.cpp  split_command_to_args_fuzz.cpp
tests/fuzz/corpus/monitor/: 01_basic_monitor  02_redis_monitor_line  03_two_lines  04_proxy_preamble  05_skip_no_quotes  06_no_newline_eof  07_unterminated_quote  09_embedded_nul  10_comment_then_cmd
tests/fuzz/corpus/resp/: 01_simple_string  02_error  03_integer  04_bulk  05_null_bulk  06_array_two_bulks  07_nested_mbulk_chain  08_intmax_bulk_len  10_truncated_bulk  11_resp3_map  12_resp3_push  13_resp3_attribute  14_resp3_double  15_resp3_bignum  16_pipelined
tests/fuzz/corpus/split/: 01_basic_set  02_quoted_value  03_hex_escape  04_malformed_hex  05_unterminated_quote  06_single_quotes  07_embedded_nul  08_long_quoted_string  09_escape_mix  10_whitespace_heavy
tests/fuzz/monitor_input_corpus/: 02_only_headers.txt  03_minimal_valid.txt  04_mixed_case.txt  05_auth_redacted.txt  06_hex_escapes.txt  07_embedded_nul.txt  08_embedded_quote.txt  09_single_quotes.txt  10_unterminated_quote.txt  11_trailing_garbage.txt  12_crlf_mixed.txt  13_utf8_bom.txt  14_no_trailing_newline.txt  17_all_command_types.txt  18_partial_truncated.txt  19_binary_blob.txt  20_pathological_quotes.txt
tests/soak/: test_cluster_turbulence.py  test_connection_churn.py  test_high_concurrency.py  test_large_payloads.py  test_long_run_memory.py  test_retry_storm.py  test_slow_network.py
